Fix mobile display

--- a/views/partial-getcardinfo.html
+++ b/views/partial-getcardinfo.html
@@ -11,5 +11,5 @@
         
 
     </div>
-    <div class="qrcode"><img src="https://api.qrserver.com/v1/create-qr-code/?data=https://http://squadmateco.herokuapp.com/getCardInfo/${user._id}"></div>
+    <div class="qrcode"><img src="https://api.qrserver.com/v1/create-qr-code/?data=https://https://squadmateco.herokuapp.com/getCardInfo/${user._id}"></div>
 </div>
