--- a/public/style.css
+++ b/public/style.css
@@ -15,10 +15,10 @@ nav img {
 }
 
 .card {
+    display: flex;
     background-color: #fff;
     border-radius: 4px;
     width: 448px;
-    height: 224px;
     margin: 5px;
     position: relative;
 }
@@ -32,13 +32,25 @@ nav img {
 }
 
 .qrcode {
-    height: 80px;
-    width: 80px;
     position: absolute;
     bottom: 10px;
     right: 10px;
 }
 
 .qrcode img {
-    width: 100%;
+    height: 80px;
+    width: 80px;
+}
+
+@media only screen and (max-width: 500px) {
+    .card{
+        width: 90%;
+        margin: 0 auto;
+        flex-wrap: wrap;
+    }
+    .qrcode {
+        position: relative; 
+        display: block;
+        margin: 0 auto;
+    }
 }
